# Candy-Breakout

./: .gitignore  README.md
docs/doxygen/client/html/: annotated.html  annotated_dup.js  class_handler.html  (+38 more)
src/client/: CMakeLists.txt
src/client/lib/SFML-2.5.1/include/SFML/Graphics/: BlendMode.hpp  Glsl.hpp  Image.hpp  RenderTarget.hpp  Text.hpp  Texture.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp
src/client/lib/SFML-2.5.1/include/SFML/System/: InputStream.hpp  Lock.hpp  MemoryInputStream.hpp  Mutex.hpp  Thread.hpp  Time.hpp
src/client/lib/SFML-2.5.1/include/SFML/Window/: Clipboard.hpp  Event.hpp  Keyboard.hpp  Mouse.hpp
src/client/lib/SFML-2.5.1/share/SFML/doc/html/: AlResource_8hpp_source.html  Audio_2Export_8hpp_source.html  Clipboard_8hpp_source.html  Clock_8hpp_source.html  Color_8hpp_source.html  Config_8hpp_source.html  Context_8hpp_source.html  Err_8hpp_source.html  FileInputStream_8hpp_source.html  GlResource_8hpp_source.html  Glsl_8hpp_source.html  Glyph_8hpp_source.html  GpuPreference_8hpp.html  GpuPreference_8hpp_source.html  Graphics_2Export_8hpp_source.html  Http_8hpp_source.html  Image_8hpp_source.html  InputStream_8hpp_source.html  IpAddress_8hpp_source.html  Lock_8hpp_source.html  Main_8hpp_source.html  Music_8hpp_source.html  Mutex_8hpp_source.html  NativeActivity_8hpp_source.html  Network_2Export_8hpp_source.html  NonCopyable_8hpp_source.html  OpenGL_8hpp_source.html  RenderTexture_8hpp_source.html  Shape_8hpp_source.html  Sleep_8hpp_source.html  SocketHandle_8hpp_source.html  SocketSelector_8hpp_source.html  SoundBufferRecorder_8hpp_source.html  SoundBuffer_8hpp_source.html  SoundFileFactory_8hpp_source.html  SoundFileWriter_8hpp_source.html  SoundRecorder_8hpp_source.html  Sprite_8hpp_source.html  System_8hpp_source.html  TcpSocket_8hpp_source.html  (+166 more)
src/client/lib/SFML-2.5.1/share/SFML/examples/shader/: shader
src/client/src/: main.cpp
src/client/src/communication/: socketclient.cpp  socketclient.h
src/client/src/game/: handler.cpp  handler.h
src/server/: CMakeLists.txt
src/server/lib/SFML-2.5.1/include/SFML/Graphics/: CircleShape.hpp  ConvexShape.hpp  Drawable.hpp  Font.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  VertexBuffer.hpp  View.hpp
src/server/lib/SFML-2.5.1/include/SFML/System/: Clock.hpp  FileInputStream.hpp  Utf.hpp
src/server/lib/SFML-2.5.1/include/SFML/Window/: Joystick.hpp  Sensor.hpp  Touch.hpp  VideoMode.hpp  Window.hpp
src/server/lib/SFML-2.5.1/share/SFML/doc/html/: Audio_8hpp_source.html  BlendMode_8hpp_source.html  CircleShape_8hpp_source.html  ContextSettings_8hpp_source.html  ConvexShape_8hpp_source.html  Cursor_8hpp_source.html  Drawable_8hpp_source.html  Event_8hpp_source.html  Font_8hpp_source.html  Ftp_8hpp_source.html  Graphics_8hpp_source.html  InputSoundFile_8hpp_source.html  Joystick_8hpp_source.html  Keyboard_8hpp_source.html  Listener_8hpp_source.html  MemoryInputStream_8hpp_source.html  Mouse_8hpp_source.html  Network_8hpp_source.html  OutputSoundFile_8hpp_source.html  Packet_8hpp_source.html  PrimitiveType_8hpp_source.html  Rect_8hpp_source.html  RectangleShape_8hpp_source.html  RenderStates_8hpp_source.html  RenderTarget_8hpp_source.html  RenderWindow_8hpp_source.html  Sensor_8hpp_source.html  Shader_8hpp_source.html  Socket_8hpp_source.html  SoundFileReader_8hpp_source.html  SoundSource_8hpp_source.html  SoundStream_8hpp_source.html  Sound_8hpp_source.html  String_8hpp_source.html  System_2Export_8hpp_source.html  TcpListener_8hpp_source.html  Text_8hpp_source.html  ThreadLocal_8hpp_source.html  Time_8hpp_source.html  UdpSocket_8hpp_source.html  (+166 more)
src/server/src/: main.cpp
src/server/src/communication/: socketserver.cpp  socketserver.h
src/server/src/game/: game.cpp  game.h  objects.cpp  state.cpp  state.h
(+156 files in other folders)
